# mindmap

./: Cargo.toml  LICENSE  package.json  pnpm-lock.yaml
src/: App.tsx  app_module.rs  bindings.ts  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_module.rs  main.rs
src-tauri/src/dao/: backend_json_dao.rs  json_dao.rs  local_backend_json_dao.rs
src-tauri/src/model/: backend.rs  backend_repository.rs  local_backend_repository.rs
src-tauri/src/singletons/: add_local_backend_usecase.rs
src-tauri/src/test/: mock_file.rs
src/dao/: backend_json_dao.rs  json_dao.rs
src/extends/: ui.rs
src/extends/ui/: backend.rs  backend_type.rs
src/lib/: dir.rs  repository_json.rs
src/model/: backend.rs  local_backend.rs
src/singletons/: add_local_backend_usecase.rs  backend_repository.rs  dao.rs  local_backend_repository.rs  path_lib.rs
ui/: appwindow.slint
ui/lib/: error.slint
ui/models/: backend.slint  local_backend.slint
ui/pages/: home.slint
ui/pages/home/: backend-manager-adapter.slint  backend-manager.slint
ui/pages/home/backend-manager/: backend-form.slint  backend-list.slint
ui/singletons/: add_local_backend_usecase.slint  all_backend_state.slint  backend-repository.slint  backend_repository.slint  local-backend-repository.slint  local_backend_repository.slint  path_lib.slint
ui/taskbar/: taskbar.slint
