[package]
name = "mindmap"
version = "0.1.0"
authors = ["tentaShiratori <tenta.shiratori@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
directories = "5.0.1"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.76"

[build-dependencies]
slint-build = "1.0"

[dev-dependencies]
rand = "0.8.5"
